 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="62dp"
            android:src="@drawable/signup_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginTop="169dp"
            android:text="@string/login_description"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@id/login_image"
            app:layout_constraintTop_toTopOf="@id/login_image"
            app:layout_constraintTop_toBottomOf="@id/login_image"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            style="@style/common_text_input_style"
            android:hint="@string/login_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            style="@style/common_text_input_style"
            android:hint="@string/login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/remember_tick"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_description"
            android:textColor="@android:color/black"
            android:layout_marginStart="290dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/login_password"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            />

     <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            style="@style/common_button_style"
            android:text="@string/sign_up_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox" />

        <TextView
            android:id="@+id/BottomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginEnd="71dp"
            android:layout_marginTop="25dp"
            android:text="@string/register_prompt"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_1"
            android:onClick="onClickGoSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>